--- a/Timing_seq.html
+++ b/Timing_seq.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="img/timing_icon.png" type="image/png">
-    <title>Timing and Sequence Illusion</title>
+    <title>Timing and Sequence Perception</title>
 
 </head>
 
@@ -27,7 +27,7 @@
                 <a href="Timbre_illusion.html">Timbre Illusion</a>
                 <a href="DPOAE.html">DPOAE</a>
                 <a href="Continuity_illusion.html">Continuity Illusion</a>
-                <a href="Timing_seq.html">Timing and Sequence Illusion</a>
+                <a href="Timing_seq.html">Timing and Sequence Perception</a>
                 <a href="Galloping.html">Galloping Rhythm</a>
                 <a href="Interleaved_melodies.php">Interleaved Melodies</a>
                 <a href="Binaural_beats.html">Binaural Beats</a>
@@ -36,16 +36,17 @@
         <a class="navbarbtn" href="about_us.html">ABOUT US</a>
     </nav>
 
-    <h1>Timing and Sequence Illusion</h1>
+    <h1>Timing and Sequence Perception</h1>
     <h3>Illusion description</h3>
-    <hr>
+    <hr style="width: 32%;">
     <div class="gridcontainer">
         <div class="textbox">
             <p> 
                 <b>What is it?</b>
-                In this illusion, there is an overall passage of musical notes. 
-                The passage can be separated into subsections that contain notes of a similar pitch structure. 
-                You will hear that pauses are inserted into the overall passage and it is your job to try and remember the passage. 
+                <br>
+                In the following piece, first demonstrated by Diana Deutsch in 1980, a sequence of notes is played. <sup>1</sup>
+                This sequence consists of smaller groups whose notes possess a uniform pitch structure. 
+                When intervals are placed between these subgroups, we are better able to perceive this pitch structure, yet randomly placing the intervals within the groups profoundly reduces our ability to.
                 <br>
                 <br>
                 <audio controls>
@@ -53,8 +54,26 @@
                 </audio>
                 <br>
                 <br>
-                It is very likely that when the pauses are inserted so that the subsections are clearly separated it is easy to remember. 
-                This is opposed to when the pauses are inserted within the subsections (so that they are not clearly separated) and this makes it more difficult to remember the passage. 
+                <br>
+                <b>How does it work?</b>
+                <br>
+                When listening to a musical sequence the auditory system tends to form perceptual groupings of notes, similar to how we would memorize a phone number in smaller chunks. 
+                There are two major cues that affect what groupings we will form:
+                <ul>
+                    <li>how similar the notes are in pitch</li>
+                    <li>the length of time between the notes <sup>2</sup></li>
+                </ul>
+                Both large pitch differences and large time intervals between sets of notes heighten our perception of groupings. 
+                Deutsch’s demonstration is interesting because it showed how significantly changes to timing can upset our perception of pitch. 
+                Musically trained subjects struggled identify the notes comprising the passage with randomly placed intervals, despite being able to without!
+                <br>
+                <br>
+                <br>
+                <b>References</b>
+                <ol>
+                    <li>Deutsch, D., 1980. The processing of structured and unstructured tonal sequences. Perception & Psychophysics, 28(5), pp.381-389.</li>
+                    <li>Hamaoui, K. and Deutsch, D., 2006. The perceptual grouping of musical sequences: Pitch and timing as competing cues. University of California, San Diego.</li>
+                </ol>
             </p>
         </div>
 
